--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <figure class="header__logo">
                     <img src="img/logo/header-logo.png" alt="PRIME ONE" class="header__logo-pic">
                 </figure>
-                <nav class="header__nav">
+                <nav class="header__nav right-nav">
                     <ul class="header__menu">
                         <li class="header__menu-item"><a href="#!" class="header__menu-link">GALLERY</a></li>
                         <li class="header__menu-item"><a href="#!" class="header__menu-link">FRIENDS</a></li>
