burger scroll fixed

--- a/index.html
+++ b/index.html
@@ -68,165 +68,169 @@
     <!-- HEADER END -->
 
     <!-- INTRO -->
-    <section class="intro">
-        <div class="intro__slider wide-wrapper">
-            <figure class="intro__left">
-                <img src="img/intro-bg.jpg" alt="" class="intro__pic">
-            </figure>
-            <div class="intro__right">
-                <h2 class="intro__title title">
-                    PRIVATE CATERING
-                </h2>
-                <h4 class="intro__subtitle subtitle">
-                    Treat your quests to a beautifully plated dinner, hand-crafted canapes or a casual BBQ.
-                </h4>
-                <div class="intro__actions">
-                    <button class="intro__button button">
-                        GET A QUOTE
-                    </button>
-                    <a href="#!" class="intro__link link">VIEW MENUS</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <!-- INTRO END -->
-
-
-    <!-- CATERING -->
-    <section class="catering" id="catering">
-        <div class="wrapper">
-            <div class="catering__cards">
-                <div class="catering__card">
-                    <figure class="catering__img">
-                        <img src="img/card-1.jpg" alt="CORPORATE CATERING" class="catering__img-item">
-                    </figure>
-                    <h3 class="catering__title title">
-                        CORPORATE CATERING
-                    </h3>
-                    <h4 class="catering__subtitle subtitle">
-                        We are able to serve events from 2 to 2000 guests and always reasonable prices.
-                    </h4>
-                    <button class="catering__button button">
-                        GET A QUOTE
-                    </button>
-                    <a href="#!" class="catering__link link">VIEW MENUS</a>
-                </div>
-                <div class="catering__card">
-                    <figure class="catering__img">
-                        <img src="img/card-2.jpg" alt="PRIVATE CATERING" class="catering__img-item">
-                    </figure>
-                    <h3 class="catering__title title">
+    <main class="main">
+        <section class="intro">
+            <div class="intro__slider wide-wrapper">
+                <figure class="intro__left">
+                    <img src="img/intro-bg.jpg" alt="" class="intro__pic">
+                </figure>
+                <div class="intro__right">
+                    <h2 class="intro__title title">
                         PRIVATE CATERING
-                    </h3>
-                    <h4 class="catering__subtitle subtitle">
-                        Fresh, seasonal and simple cuisine. Food is our business and our passion.
+                    </h2>
+                    <h4 class="intro__subtitle subtitle">
+                        Treat your quests to a beautifully plated dinner, hand-crafted canapes or a casual BBQ.
                     </h4>
-                    <button class="catering__button button">
-                        GET A QUOTE
-                    </button>
-                    <a href="#!" class="catering__link link">VIEW MENUS</a>
-                </div>
-                <div class="catering__card">
-                    <figure class="catering__img">
-                        <img src="img/card-3.jpg" alt="WEDDING CATERING" class="catering__img-item">
-                    </figure>
-                    <h3 class="catering__title title">
-                        WEDDING CATERING
-                    </h3>
-                    <h4 class="catering__subtitle subtitle">
-                        We use only the best organic ingredients and gluten and dairy free cooking.
-                    </h4>
-                    <button class="catering__button button">
-                        GET A QUOTE
-                    </button>
-                    <a href="#!" class="catering__link link">VIEW MENUS</a>
-                </div>
-                <div class="catering__card">
-                    <figure class="catering__img">
-                        <img src="img/card-4.jpg" alt="ONLINE CATERING" class="catering__img-item">
-                    </figure>
-                    <h3 class="catering__title title">
-                        ONLINE CATERING
-                    </h3>
-                    <h4 class="catering__subtitle subtitle">
-                        Successful catering is about organisation, high quality service, and great food.
-                        Successful catering is about organisation, high quality service, and great food.
-                        Successful catering is about organisation, high quality service, and great food.
-                        Successful catering is about organisation, high quality service, and great food.
-                    </h4>
-                    <button class="catering__button button">
-                        GET A QUOTE
-                    </button>
-                    <a href="#!" class="catering__link link">VIEW MENUS</a>
+                    <div class="intro__actions">
+                        <button class="intro__button button">
+                            GET A QUOTE
+                        </button>
+                        <a href="#!" class="intro__link link">VIEW MENUS</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <!-- CATERING END -->
+        </section>
 
-    <!-- BENEFITS -->
-    <section class="benefits" id="benefits">
-        <div class="wide-wrapper benefits__banner">
-            <div class="wrapper benefits__banner-sm">
-                <h2 class="benefits__title title">WHY CHOOSE US?</h2>
-            </div>
-        </div>
-        <div class="benefits__cards-bg wide-wrapper">
+
+        <!-- INTRO END -->
+
+
+        <!-- CATERING -->
+        <section class="catering" id="catering">
             <div class="wrapper">
-                <div class="benefits__cards">
-                    <div class="benefits__card">
-                        <img src="img/icons/flower.jpg" alt="" class="benefits__card-icon">
-                        <div class="benefits__card-text">
-                            <h2 class="benefits__title-sm title">
-                                ALWAYS FRESH
-                            </h2>
-                            <h4 class="benefits__subtitle subtitle">
-                                Fresh, seasonal and simple cuisine. Food is our business and our passion.Fresh, seasonal
-                                and simple cuisine. Food is our business and our passion.Fresh, seasonal and simple
-                                cuisine. Food is our business and our passion.Fresh, seasonal and simple cuisine. Food
-                                is our business and our passion.
-                            </h4>
-                        </div>
+                <div class="catering__cards">
+                    <div class="catering__card">
+                        <figure class="catering__img">
+                            <img src="img/card-1.jpg" alt="CORPORATE CATERING" class="catering__img-item">
+                        </figure>
+                        <h3 class="catering__title title">
+                            CORPORATE CATERING
+                        </h3>
+                        <h4 class="catering__subtitle subtitle">
+                            We are able to serve events from 2 to 2000 guests and always reasonable prices.
+                        </h4>
+                        <button class="catering__button button">
+                            GET A QUOTE
+                        </button>
+                        <a href="#!" class="catering__link link">VIEW MENUS</a>
                     </div>
-                    <div class="benefits__card">
-                        <img src="img/icons/time.jpg" alt="" class="benefits__card-icon">
-                        <div class="benefits__card-text">
-                            <h2 class="benefits__title-sm title">
-                                RELIABLE AND FLAWLESS
-                            </h2>
-                            <h4 class="benefits__subtitle subtitle">
-                                Successful catering is about organisation, high quality service, and great food.
-                            </h4>
-                        </div>
+                    <div class="catering__card">
+                        <figure class="catering__img">
+                            <img src="img/card-2.jpg" alt="PRIVATE CATERING" class="catering__img-item">
+                        </figure>
+                        <h3 class="catering__title title">
+                            PRIVATE CATERING
+                        </h3>
+                        <h4 class="catering__subtitle subtitle">
+                            Fresh, seasonal and simple cuisine. Food is our business and our passion.
+                        </h4>
+                        <button class="catering__button button">
+                            GET A QUOTE
+                        </button>
+                        <a href="#!" class="catering__link link">VIEW MENUS</a>
                     </div>
-                    <div class="benefits__card">
-                        <img src="img/icons/leaf.jpg" alt="" class="benefits__card-icon">
-                        <div class="benefits__card-text">
-                            <h2 class="benefits__title-sm title">
-                                CLEAN AND HEALTHY
-                            </h2>
-                            <h4 class="benefits__subtitle subtitle">
-                                We use only the best organic ingredients and gluten and dairy free cooking.
-                            </h4>
-                        </div>
+                    <div class="catering__card">
+                        <figure class="catering__img">
+                            <img src="img/card-3.jpg" alt="WEDDING CATERING" class="catering__img-item">
+                        </figure>
+                        <h3 class="catering__title title">
+                            WEDDING CATERING
+                        </h3>
+                        <h4 class="catering__subtitle subtitle">
+                            We use only the best organic ingredients and gluten and dairy free cooking.
+                        </h4>
+                        <button class="catering__button button">
+                            GET A QUOTE
+                        </button>
+                        <a href="#!" class="catering__link link">VIEW MENUS</a>
                     </div>
-                    <div class="benefits__card">
-                        <img src="img/icons/fit.jpg" alt="" class="benefits__card-icon">
-                        <div class="benefits__card-text">
-                            <h2 class="benefits__title-sm title">
-                                FITS ANY SIZE AND BUDGET
-                            </h2>
-                            <h4 class="benefits__subtitle subtitle">
-                                We are able to serve events from 2 to 2000 guests and always at reasonable prices.
-                            </h4>
+                    <div class="catering__card">
+                        <figure class="catering__img">
+                            <img src="img/card-4.jpg" alt="ONLINE CATERING" class="catering__img-item">
+                        </figure>
+                        <h3 class="catering__title title">
+                            ONLINE CATERING
+                        </h3>
+                        <h4 class="catering__subtitle subtitle">
+                            Successful catering is about organisation, high quality service, and great food.
+                            Successful catering is about organisation, high quality service, and great food.
+                            Successful catering is about organisation, high quality service, and great food.
+                            Successful catering is about organisation, high quality service, and great food.
+                        </h4>
+                        <button class="catering__button button">
+                            GET A QUOTE
+                        </button>
+                        <a href="#!" class="catering__link link">VIEW MENUS</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- CATERING END -->
+
+        <!-- BENEFITS -->
+        <section class="benefits" id="benefits">
+            <div class="wide-wrapper benefits__banner">
+                <div class="wrapper benefits__banner-sm">
+                    <h2 class="benefits__title title">WHY CHOOSE US?</h2>
+                </div>
+            </div>
+            <div class="benefits__cards-bg wide-wrapper">
+                <div class="wrapper">
+                    <div class="benefits__cards">
+                        <div class="benefits__card">
+                            <img src="img/icons/flower.jpg" alt="" class="benefits__card-icon">
+                            <div class="benefits__card-text">
+                                <h2 class="benefits__title-sm title">
+                                    ALWAYS FRESH
+                                </h2>
+                                <h4 class="benefits__subtitle subtitle">
+                                    Fresh, seasonal and simple cuisine. Food is our business and our passion.Fresh,
+                                    seasonal
+                                    and simple cuisine. Food is our business and our passion.Fresh, seasonal and simple
+                                    cuisine. Food is our business and our passion.Fresh, seasonal and simple cuisine.
+                                    Food
+                                    is our business and our passion.
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="benefits__card">
+                            <img src="img/icons/time.jpg" alt="" class="benefits__card-icon">
+                            <div class="benefits__card-text">
+                                <h2 class="benefits__title-sm title">
+                                    RELIABLE AND FLAWLESS
+                                </h2>
+                                <h4 class="benefits__subtitle subtitle">
+                                    Successful catering is about organisation, high quality service, and great food.
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="benefits__card">
+                            <img src="img/icons/leaf.jpg" alt="" class="benefits__card-icon">
+                            <div class="benefits__card-text">
+                                <h2 class="benefits__title-sm title">
+                                    CLEAN AND HEALTHY
+                                </h2>
+                                <h4 class="benefits__subtitle subtitle">
+                                    We use only the best organic ingredients and gluten and dairy free cooking.
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="benefits__card">
+                            <img src="img/icons/fit.jpg" alt="" class="benefits__card-icon">
+                            <div class="benefits__card-text">
+                                <h2 class="benefits__title-sm title">
+                                    FITS ANY SIZE AND BUDGET
+                                </h2>
+                                <h4 class="benefits__subtitle subtitle">
+                                    We are able to serve events from 2 to 2000 guests and always at reasonable prices.
+                                </h4>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
     <!-- BENEFITS END -->
 
     <!-- FOOTER -->
