--- a/prime_one/index.html
+++ b/prime_one/index.html
@@ -153,9 +153,6 @@
                         </h3>
                         <h4 class="catering__subtitle subtitle">
                             Successful catering is about organisation, high quality service, and great food.
-                            Successful catering is about organisation, high quality service, and great food.
-                            Successful catering is about organisation, high quality service, and great food.
-                            Successful catering is about organisation, high quality service, and great food.
                         </h4>
                         <button class="catering__button button">
                             GET A QUOTE
@@ -184,12 +181,7 @@
                                     ALWAYS FRESH
                                 </h2>
                                 <h4 class="benefits__subtitle subtitle">
-                                    Fresh, seasonal and simple cuisine. Food is our business and our passion.Fresh,
-                                    seasonal
-                                    and simple cuisine. Food is our business and our passion.Fresh, seasonal and simple
-                                    cuisine. Food is our business and our passion.Fresh, seasonal and simple cuisine.
-                                    Food
-                                    is our business and our passion.
+                                    Fresh, seasonal and simple cuisine. Food is our business and our passion.
                                 </h4>
                             </div>
                         </div>
