--- a/prime_one/index.html
+++ b/prime_one/index.html
@@ -4,6 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+    <script type="text/javascript" nonce="f38f623aa1b3429aa05bd9e71bc"
+        src="//local.adguard.org?ts=1592128697276&amp;type=content-script&amp;dmn=realfavicongenerator.net&amp;css=1&amp;js=1&amp;gcss=1&amp;rel=1&amp;rji=1&amp;stealth=1&amp;uag="></script>
+    <script type="text/javascript" nonce="f38f623aa1b3429aa05bd9e71bc"
+        src="//local.adguard.org?ts=1592128697276&amp;name=AdGuard%20Extra&amp;name=AdGuard%20Assistant&amp;type=user-script"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="img/favicons/site.webmanifest">
+    <link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="img/favicons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="img/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
     <title>Prime One NYC</title>
     <!--<link rel="stylesheet" type="text/css" href="css/reset.min.css">-->
     <link rel="stylesheet" type="text/css" href="css/style.min.css">
